Issue #2190: Add template files for layouts and the hero block to achieve a full-bleed hero.

--- a/core/themes/basis/css/component/breadcrumb.css
+++ b/core/themes/basis/css/component/breadcrumb.css
@@ -4,7 +4,7 @@
  */
 .breadcrumb {
   overflow: hidden;
-  margin: 0 0 1em;
+  margin: 1em 0;
 }
 
 .breadcrumb ol,
